app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: debugocp-service
  namespace: debugocp
spec:
  selector:
    app: debugocp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080 # Mesma porta do container
